Fix spacing between slider and image hover

--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,7 @@ body {
 #image-section-1 {
     width: 100%;
     font-size: 0px;
+    margin-top: 10px;
 }
 
 #product-section-1{
